# statsbomb_event

./: .gitignore  README.md  pyproject.toml
statsbomb_event/: common_fun.py  data_exploration.ipynb  data_extraction.ipynb  player_minutes_played.ipynb  player_positions.ipynb  position_definition.py
