[project]
name = "statsbomb_event"
version = "0.0.1"
description = "A project that manipulate Statsbomb event data"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Chiurco", email = "giochi99@hotmail.it" } ]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pyarrow>=20.0.0",
    "statsbombpy>=1.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
